AC_PREREC(2.5.3)

AC_INIT([liblsd], [m4_esyscmd([head -n 1 debian/changelog | sed -e 's/.*[(]//' | sed -e 's/[-].*//' | tr -d '\n'])], [rimz@yandex-team.ru])

AM_INIT_AUTOMAKE

AC_CONFIG_HEADERS(config/settings.h)

AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LIBTOOL

AC_LANG([C++])
AM_MAINTAINER_MODE

# process yandex_platform lib
PKG_CHECK_MODULES(yandex_platform, [yandex-platform], [], [echo yandex-platform not found])

LIBS="$yandex_platform_LIBS"
CPPFLAGS="$yandex_platform_CFLAGS -pthread"

for i in -W -Wall -Wextra -Wlint -fexceptions -frtti -ftemplate-depth-128
do
        AX_CHECK_COMPILER_FLAGS([$i], [CXXFLAGS="$CXXFLAGS $i"], [])
done

# process zmq lib
AC_CHECK_LIB([zmq], [exit])
AC_CHECK_LIB([uuid], [exit])
AC_CHECK_LIB([eblob_cpp], [exit])
AC_CHECK_LIB([curl], [exit])

# process boost libs
AX_BOOST_BASE
AX_BOOST_THREAD
AX_BOOST_PROGRAM_OPTIONS

# enable all gathered options
AC_CONFIG_FILES([
	Makefile
	include/Makefile
	include/pmq/Makefile
	include/details/Makefile
	sandbox/Makefile
	])

AC_OUTPUT
