AC_PREREC(2.5.3)

AC_INIT([liblsd], [m4_esyscmd([head -n 1 debian/changelog | sed -e 's/.*[(]//' | sed -e 's/[-].*//' | tr -d '\n'])], [rimz@yandex-team.ru])

AM_INIT_AUTOMAKE

AC_CONFIG_HEADERS(config/settings.h)

AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LIBTOOL

AC_LANG([C++])
AM_MAINTAINER_MODE

for i in -W -Wall -Wextra -Wlint -fexceptions -frtti -ftemplate-depth-128
do
        AX_CHECK_COMPILER_FLAGS([$i], [CXXFLAGS="$CXXFLAGS $i"], [])
done

# process libs
AC_CHECK_LIB([zmq], [exit])
AC_CHECK_LIB([uuid], [exit])
AC_CHECK_LIB([eblob_cpp], [exit])
AC_CHECK_LIB([curl], [exit])
AC_CHECK_LIB([msgpack], [exit])

# process open ssl
AX_CHECK_OPENSSL([], [AC_MSG_ERROR([openssl not found])])

# process boost libs
AX_BOOST_BASE
AX_BOOST_THREAD
AX_BOOST_PROGRAM_OPTIONS

# enable all gathered options
AC_CONFIG_FILES([
	Makefile
	sandbox/Makefile
	])

AC_OUTPUT

