noinst_HEADERS = cached_message.hpp client_context.hpp client_impl.hpp \
	conductor_heartbeats_collector.hpp configuration.hpp heartbeat_notifier.hpp \
	heartbeats_collector.hpp helpers.hpp multicast_client.hpp \
	multicast_heartbeats_collector.hpp multicast_server.hpp persistent_storage.hpp \
	persistent_storage_callback.hpp progress_timer.hpp refresher.hpp \
	server_context.hpp server_impl.hpp server_socket.hpp smart_logger.hpp structs.hpp
